# openai_orch

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build-and-test.yml
examples/basic/: main.rs
examples/bulk/: main.rs
src/: embed.rs  io.rs  keys.rs  lib.rs  policies.rs  prelude.rs  utils.rs
src/chat/: mod.rs  siso.rs
