[package]
name = "openai_orch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-openai = "0.12.0"
async-trait = "0.1.68"
dotenv = "0.15.0"
rand = "0.8.5"
timing = "0.2.3"
tokio = { version = "1.29.0", features = ["full"] }

[dev-dependencies]
futures = "0.3.28"
