[package]
name = "openai-orch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A concurrency-included Rust client for the OpenAI API."
homepage = "https://github.com/johnbchron/openai_orch"
repository = "https://github.com/johnbchron/openai_orch"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-openai = "0.12.0"
async-trait = "0.1.68"
dotenv = "0.15.0"
log = "0.4.19"
timing = "0.2.3"
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"
tokio = { version = "1.29.0", features = ["rt", "time", "sync"] }

[dev-dependencies]
env_logger = "0.10.0"
futures = "0.3.28"
tokio = { version = "1.29.0", features = ["full"] }
